orchestration/k8s/app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dp-a9rdmi1dk78h2-clusterip
  namespace: ns-efd01fs6etdtgreod1625424h8
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: dp-a9rdmi1dk78h2
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-a9rdmi1dk78h2
  namespace: ns-efd01fs6etdtgreod1625424h8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dp-a9rdmi1dk78h2
  template:
    metadata:
      labels:
        app: dp-a9rdmi1dk78h2
    spec:
      containers:
        - name: postgres
          image: postgres:16rc1
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: dp-a9rdmi1dk78h2-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: dp-a9rdmi1dk78h2-data
          persistentVolumeClaim:
            claimName: dp-a9rdmi1dk78h2-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: dp-4c5dmi1dk78h2-svc
  namespace: ns-efd01fs6etdtgreod1625424h8
spec:
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  selector:
    app: dp-4c5dmi1dk78h2
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-4c5dmi1dk78h2
  namespace: ns-efd01fs6etdtgreod1625424h8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dp-4c5dmi1dk78h2
  template:
    metadata:
      labels:
        app: dp-4c5dmi1dk78h2
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: dp-4c5dmi1dk78h2-data
              mountPath: /data
      volumes:
        - name: dp-4c5dmi1dk78h2-data
          persistentVolumeClaim:
            claimName: dp-4c5dmi1dk78h2-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: dp-4c5d2jndk78h2-svc
  namespace: ns-efd01fs6etdtgreod1625424h8
spec:
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      name: console
    - protocol: TCP
      port: 9001
      targetPort: 9001
      name: api
  selector:
    app: dp-4c5d2jndk78h2
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-4c5d2jndk78h2
  namespace: ns-efd01fs6etdtgreod1625424h8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dp-4c5d2jndk78h2
  template:
    metadata:
      labels:
        app: dp-4c5d2jndk78h2
    spec:
      containers:
        - name: minio
          image: bitnami/minio:latest
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - name: dp-4c5d2jndk78h2-data
              mountPath: /bitnami/minio/data
      volumes:
        - name: dp-4c5d2jndk78h2-data
          persistentVolumeClaim:
            claimName: dp-4c5d2jndk78h2-pvc

---

---
apiVersion: v1
kind: Service
metadata:
  name: dp-2j5d2j4ck789k-clusterip
  namespace: ns-efd01fs6etdtgreod1625424h8
spec:
  ports:
    - protocol: TCP
      port: 3030
      targetPort: 3030
      name: api
    - protocol: TCP
      port: 80
      targetPort: 80
      name: console
  selector:
    app: dp-2j5d2j4ck789k
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-2j5d2j4ck789k
  namespace: ns-efd01fs6etdtgreod1625424h8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dp-2j5d2j4ck789k
  template:
    metadata:
      labels:
        app: dp-2j5d2j4ck789k
    spec:
      nodeName: s106-k8s-worker-1
      containers:
        - name: dp-2j5d2j4ck789k-node
          image: hyperdot/node:3ea9bca
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3030
          volumeMounts:
            - name: dp-2j5d2j4ck789k-config
              mountPath: /app/config
            - name: dp-2j5d2j4j6f89k-config
              mountPath: /app/config
        - name: dp-2j5d2j4ck789k-console
          image: hyperdot/fronted:c7bc5d5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

      volumes:
        - name: dp-2j5d2j4ck789k-config
          configMap:
            name: dp-2j5d2j4ck789k-config
        - name: dp-2j5d2j4j6f89k-config
          configMap:
            name: dp-2j5d2j4j6f89k-config

---
apiVersion: "networking.k8s.io/v1beta1"
kind: "Ingress"
metadata:
  annotations:
    kubernetes.io/ingress.class: "kong"
  name: "dp-2j5d2j4ck789k-ingress"
  namespace: ns-efd01fs6etdtgreod1625424h8
spec:
  rules:
    - host: "dp-2j5d2j4ck789k.gw106.oneitfarm.com"
      http:
        paths:
          - backend:
              serviceName: "dp-2j5d2j4ck789k-clusterip"
              servicePort: 80
